--- a/Konferencije/src/java/config/labels.properties
+++ b/Konferencije/src/java/config/labels.properties
@@ -42,7 +42,7 @@ footer=<table><tr><td class="d1">Nikola Peji\u0107 0041/2014<div class="copy"><a
 menu_start_label=Po\u010detna
 menu_search_label=Pretraga
 menu_logout_label=Odjavi se
-menu_my_agenda_label=Moja Agenda
+menu_my_conferences_label=Moje Konferencije
 
 need_username_message=Morate da unesete korisni\u010dko ime
 need_password_message=Morate da unesete \u0161ifru
